--- a/package.json
+++ b/package.json
@@ -12,7 +12,44 @@
   "dependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.9",
-    "gulp-ng-annotate": "^0.3.3",
-    "gulp-uglify": "^1.0.1"
+    "gulp-ng-annotate": "~0.3.6",
+    "gulp-uglify": "~1.0.1",
+    "gulp-angular-filesort": "~1.0.4",
+    "gulp-angular-templatecache": "~1.4.2",
+    "gulp-autoprefixer": "~2.0.0",
+    "gulp-csso": "~0.2.9",
+    "gulp-filter": "~1.0.2",
+    "gulp-flatten": "~0.0.4",
+    "gulp-imagemin": "~2.0.0",
+    "gulp-inject": "~1.0.2",
+    "gulp-jshint": "~1.9.0",
+    "gulp-karma": "~0.0.4",
+    "gulp-load-plugins": "~0.7.1",
+    "gulp-minify-html": "~0.1.7",
+    "gulp-ngdocs": "^0.2.7",
+    "gulp-protractor": "~0.0.11",
+    "gulp-replace": "~0.5.0",
+    "gulp-rev": "~2.0.1",
+    "gulp-rev-replace": "~0.3.1",
+    "gulp-sass": "~1.1.0",
+    "gulp-size": "~1.1.0",
+    "gulp-useref": "~1.0.2",
+    "http-proxy": "~1.7.0",
+    "jshint-stylish": "~1.0.0",
+    "karma-jasmine": "~0.3.1",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "main-bower-files": "~2.4.0",
+    "orchestrator": "^0.3.7",
+    "protractor": "~1.4.0",
+    "require-dir": "~0.1.0",
+    "uglify-save-license": "~0.4.1",
+    "wiredep": "~2.2.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^1.9.0",
+    "gulp-ngdocs": "^0.2.7",
+    "once": "^1.3.1",
+    "replace-ext": "0.0.1",
+    "vinyl": "^0.4.6"
   }
 }
